--- a/score-manager-frontend/src/app/layout/layout.component.html
+++ b/score-manager-frontend/src/app/layout/layout.component.html
@@ -1,9 +1,7 @@
 <mat-sidenav-container class="sidenav-container">
   <mat-sidenav #sidenav class="sidenav" [mode]="'side'" [opened]="true">
     <mat-nav-list>
-      <a mat-list-item href="#">Link 1</a>
-      <a mat-list-item href="#">Link 2</a>
-      <!-- Add more menu items as needed -->
+      <a *ngFor="let item of menuItems" mat-list-item [routerLink]="item.link" routerLinkActive="mdc-list-item--activated">{{item.text}}</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
