--- a/score-manager-frontend/src/app/scores/scores-list/scores-list.component.html
+++ b/score-manager-frontend/src/app/scores/scores-list/scores-list.component.html
@@ -37,3 +37,5 @@
   <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
 </mat-table>
 <mat-paginator [pageSizeOptions]="[10, 25, 100]" [length]="(dataSource.total$ | async) || 0"></mat-paginator>
+
+<button mat-fab color="primary" style="position: fixed; float: right; bottom: 10%; right: 10%;" routerLink="create"><mat-icon>add</mat-icon></button>
