--- a/score-manager-frontend/src/app/scores/scores-form/scores-form.component.html
+++ b/score-manager-frontend/src/app/scores/scores-form/scores-form.component.html
@@ -1,14 +1,29 @@
-<mat-card>
-  <mat-card-header>
-    <mat-card-title>New score</mat-card-title>
-  </mat-card-header>
-  <mat-card-content>
-    <mat-form-field>
-      <input matInput placeholder="Title">
-    </mat-form-field>
-  </mat-card-content>
-  <mat-card-actions align="end">
-    <button mat-button>Cancel</button>
-    <button mat-button color="primary">Save</button>
-  </mat-card-actions>
-</mat-card>
+<form [formGroup]="form" (submit)="save()" (keydown.enter)="$event.preventDefault(); save()">>
+  <mat-card>
+    <mat-card-header>
+      <mat-card-title>New score</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <div class="scores-form">
+        <mat-form-field>
+          <mat-label>Title</mat-label>
+          <input matInput placeholder="Title" formControlName="title" #title>
+        </mat-form-field>
+        <mat-form-field>
+          <mat-label>Composer</mat-label>
+          <input matInput placeholder="Composer" formControlName="composer">
+        </mat-form-field>
+        <duration-seconds formControlName="duration"></duration-seconds>
+        <mat-form-field>
+          <mat-label>Year</mat-label>
+          <input type="number" matInput placeholder="Year" formControlName="year">
+        </mat-form-field>
+      </div>
+    </mat-card-content>
+    <mat-card-actions align="end">
+      <button type="button" *ngIf="isEdit$ | async" mat-button color="warn" (click)="delete()" style="margin-right: auto">Delete</button>
+      <button mat-button routerLink="/scores">Cancel</button>
+      <button type="submit" mat-button color="primary">Save</button>
+    </mat-card-actions>
+  </mat-card>
+</form>
