--- a/score-manager-frontend/src/app/scores/scores-list/scores-list.component.html
+++ b/score-manager-frontend/src/app/scores/scores-list/scores-list.component.html
@@ -4,12 +4,6 @@
 </mat-form-field>
 <!-- Mat-table to display the scores -->
 <mat-table [dataSource]="dataSource" matSort matSortActive="title" matSortDirection="asc">
-  <!-- Position Column -->
-  <ng-container matColumnDef="position">
-    <mat-header-cell *matHeaderCellDef mat-sort-header> No.</mat-header-cell>
-    <mat-cell *matCellDef="let element"> {{ element.position }}</mat-cell>
-  </ng-container>
-
   <ng-container matColumnDef="title">
     <mat-header-cell *matHeaderCellDef mat-sort-header>Title</mat-header-cell>
     <mat-cell *matCellDef="let score"> {{ score.title }}</mat-cell>
@@ -31,6 +25,15 @@
   <ng-container matColumnDef="year">
     <mat-header-cell *matHeaderCellDef mat-sort-header> Year</mat-header-cell>
     <mat-cell *matCellDef="let score"> {{ score.year }}</mat-cell>
+  </ng-container>
+
+  <ng-container matColumnDef="actions">
+    <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
+    <mat-cell *matCellDef="let score">
+      <button mat-icon-button [routerLink]="['/scores', score.id]">
+        <mat-icon>edit</mat-icon>
+      </button>
+    </mat-cell>
   </ng-container>
 
   <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
